// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin snapshot class-properties: class-properties 1`] = `
"\\"use strict\\";

class A {
  constructor() {
    this.a = () => 'hello';
  }

}"
`;

exports[`plugin snapshot dead code: dead code 1`] = `
"\\"use strict\\";

function hoge() {}"
`;

exports[`plugin snapshot import: import 1`] = `
"\\"use strict\\";

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }"
`;

exports[`plugin snapshot object reset spread: object reset spread 1`] = `
"\\"use strict\\";

const a = Object.assign({}, foo);"
`;
